samples/OK/idiv_conversion.php
<?php
declare(strict_types=1);
function abcdefghijklmnopqrstuvwxyz123456789(int $haha, int $hihi) : int
{
    $a = 6 / 2;
    $b = 6 / 2.0;
    return $haha / 8;
}
return abcdefghijklmnopqrstuvwxyz123456789(2, 4);